--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         </section>
 
-            <script type="text/javascript" src="js/script.js"></script>
+        <script src="script.js" type="text/javascript"></script>
 
     </body>
 
